fixes nav colors, hovers, spacing

--- a/src/css/lavamachine/_lavamachine-nav.css
+++ b/src/css/lavamachine/_lavamachine-nav.css
@@ -1,1 +1,14 @@
-/* Currently empty */
+.lavamachine-nav {
+
+    & a:hover {
+        color: var(--lavamachine-primary);
+    }
+
+    & a:focus {
+        box-shadow: none;
+    }
+}
+
+.lavamachine-nav__link:hover {
+    text-decoration: none;
+}
